Init topic files.

--- a/_lib/infodata.sty
+++ b/_lib/infodata.sty
@@ -1,6 +1,6 @@
 %%  TITLE INFO  %%
-\newcommand\StudProgram{Otevřená Informatika, Magisterský}
-\newcommand\StudBranch{Web a multimedia}
+\newcommand\StudProgram{OI Mgr}
+\newcommand\StudBranch{Společné}
 \newcommand\WorkTitle{Tématické okruhy ke státní závěrečné zkoušce pro magisterský studijní program Otevřená Informatika (OI)}
 \newcommand\Name{Studenti OI}
 \newcommand\Faculty{Fakulta elektrotechnická}
