--- a/_lib/macros.sty
+++ b/_lib/macros.sty
@@ -73,6 +73,7 @@
 		\bigskip
 		{\Large\bf \TitleUrl}\\
 		\bigskip
+		{\Large\bf \StudProgram~-~\StudBranch}\\
 		\vfill
 		\vglue 15mm
 		\bigskip
