--- a/reference.bib
+++ b/reference.bib
@@ -205,10 +205,10 @@
   url = "http://cs.wikipedia.org/wiki/Databáze"
 }
 
-@ONLINE{25-datovesite,
-  author = "{Jiří Peterka}",
-  title = "Co jsou datové sítě?",
-  cited = "01.\,06.\,2013",
-  year = 2013,
-  url = "http://www.earchiv.cz/b00/b0003001.php3"
+@ONLINE{ko:ilp-sucha,
+  author = "{Přemysl Šůcha}",
+  title = "Celočíselné lineární programování",
+  cited = "01.\,06.\,2014",
+  year = 2004,
+  url = "http://support.dce.felk.cvut.cz/pub/hanzalek/_private/ref/sucha_ilp.pdf"
 }
