--- a/spolecne/oi-magistr-spolecne.tex
+++ b/spolecne/oi-magistr-spolecne.tex
@@ -45,9 +45,15 @@
 %%%%%%%%    INCLUDE OTAZEK     %%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \include{01-spolecne} % PAL
-
+\include{01/01-spolecne} % PAL
+\include{02/02-spolecne} % PAL
+\include{03/03-spolecne} % PAL
+\include{04/04-spolecne} % PAL
+\include{05/05-spolecne} % TAL
+\include{06/06-spolecne} % TAL
 \include{07/07-spolecne} % KO
+\include{08/08-spolecne} % KO
+\include{09/09-spolecne} % KO
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%	BIBLIOGRAFIE	        %%%%%%%%%%%%%%%%%%
