--- a/_lib/macros.sty
+++ b/_lib/macros.sty
@@ -66,7 +66,7 @@
 		\University\\
 		\Faculty\\
 		\vglue 10mm
-		\includegraphics[width=50mm]{../LogoCVUT}
+		\includegraphics[width=50mm]{../_materials/LogoCVUT}
 		\vglue 30mm
 		\bigskip
 		{\Large\bf \WorkTitle}\\
