--- a/spolecne/02/02-spolecne.tex
+++ b/spolecne/02/02-spolecne.tex
@@ -1,2 +1,2 @@
 %!TEX root=../oi-magistr-spolecne.tex
-\section[PAL - grafy]{Neorientované a orientované grafy, jejich reprezentace. Prohledávání grafu (do hloubky a do šířky), topologické uspořádání, souvislost, stromy, minimální kostra.}
+\section[PAL - Grafy - refrezentace a algoritmy]{Neorientované a orientované grafy, jejich reprezentace. Prohledávání grafu (do hloubky a do šířky), topologické uspořádání, souvislost, stromy, minimální kostra.}
