--- a/spolecne/03/03-spolecne.tex
+++ b/spolecne/03/03-spolecne.tex
@@ -1,2 +1,2 @@
 %!TEX root=../oi-magistr-spolecne.tex
-\section[PAL - analyzátory, gramatiky]{Lexikální analyzátor, syntaktický strom, syntaktický analyzátor shora dolů, LL(1) gramatiky, rozkladové tabulky.}
+\section[PAL - Analyzátory, gramatiky]{Lexikální analyzátor, syntaktický strom, syntaktický analyzátor shora dolů, LL(1) gramatiky, rozkladové tabulky.}
