--- a/spolecne/05/05-spolecne.tex
+++ b/spolecne/05/05-spolecne.tex
@@ -1,4 +1,15 @@
 %!TEX root=../oi-magistr-spolecne.tex
 \section[TAL - Algoritmus, P, NP]{Algoritmus, správnost algoritmu, složitost algoritmu, složitost úlohy, třída P, třída NP.}
 
-\subsection*{heading}
+\subsection*{Algoritmus}
+
+\subsection*{Správnost algoritmu}
+
+\subsection*{Složitost algoritmu}
+
+\subsection*{Složitost úlohy - třídy složitosti}
+
+\subsection*{Třída složitosti - P}
+\label{heading:05-npc}
+
+\subsection*{Třída složitosti - NP}
