--- a/spolecne/01/01-spolecne.tex
+++ b/spolecne/01/01-spolecne.tex
@@ -1,2 +1,2 @@
 %!TEX root=../oi-magistr-spolecne.tex
-\section[PAL - složitost, fronty, haldy]{Amortizovaná složitost. Prioritní fronty, haldy (binární, d-regulární, binomiální, Fibonacciho), operace nad nimi a jejich složitost.}
+\section[PAL - Složitost, fronty, haldy]{Amortizovaná složitost. Prioritní fronty, haldy (binární, d-regulární, binomiální, Fibonacciho), operace nad nimi a jejich složitost.}
