--- a/spolecne/07/07-spolecne.tex
+++ b/spolecne/07/07-spolecne.tex
@@ -10,7 +10,7 @@ Obvykle se celočíselné lineární programování zapisuje ve tvaru:
 	$$max(c^T \cdot x : \A \cdot x \leq b, x \in Z^n)$$
 	
 Pokud bychom takovou úlohu řešili pomocí lineárního programování s tím, že bychom výsledek zaokrouhlili, nejenom že bychom neměli zaručeno že výsledné řešení bude optimální ale ani to, zda bude přípustné. 
-Zatímco úloha LP je řešitelná v polynomiálním čase, úloha ILP je tzv. \hyperref[heading:05-npc]{NP-těžká} (NP-hard), neboli není znám algoritmus, který by vyřešil libovolnou instanci této úlohy v polynomiálním čase. Protože prostor řešení ILP není konvexní množina, nelze přímo aplikovat metody konvexní optimalizace.
+Zatímco úloha LP je řešitelná v polynomiálním čase, úloha ILP je tzv. \hyperref[heading:npc]{NP-těžká} (NP-hard), neboli není znám algoritmus, který by vyřešil libovolnou instanci této úlohy v polynomiálním čase. Protože prostor řešení ILP není konvexní množina, nelze přímo aplikovat metody konvexní optimalizace.
 
 \subsubsection*{Formulace optimalizačních a rozhodovacích problémů pomocí ILP.}
 
