--- a/spolecne/05/05-spolecne.tex
+++ b/spolecne/05/05-spolecne.tex
@@ -1,9 +1,12 @@
 %!TEX root=../oi-magistr-spolecne.tex
 \section[TAL - Algoritmus, P, NP]{Algoritmus, správnost algoritmu, složitost algoritmu, složitost úlohy, třída P, třída NP.}
 
+% symboly - http://www.combinatorics.net/Resources/weblib/A.12-13/a12.html
 \paragraph{Algoritmus.}
 \label{algoritmus}
-\emph{Algoritmem} rozumíme dobře definovaný proces, tj. posloupnost výpočetních kroků, který přijímá hodnoty (zadání, vstup) a vytváří hodnoty (řešení, výstup).
+\textit{Algoritmem} rozumíme dobře definovaný proces, tj. posloupnost výpočetních kroků, který přijímá hodnoty (zadání, vstup) a vytváří hodnoty (řešení, výstup).
+
+Řekneme, že algoritmus $\mathcal{A}$ \textit{řeší}  úlohu $\mathcal{U}$, jestliže pro každý vstup (každou instanci problému $\mathcal{U}$) vydá správné řešení.
 
 \paragraph{Správnost algoritmu}
 K ověření správnosti algoritmu je třeba ověřit 2 věci:
@@ -12,12 +15,12 @@ K ověření správnosti algoritmu je třeba ověřit 2 věci:
 \end{enumerate}
 
 \paragraph{Variant.}
-Pro důkaz faktu, že se algoritmus na každém vstupu zastaví, je založen na nalezení tzv. \emph{variantu}. Variant je hodnota udaná přirozeným číslem, která se během práce algoritmu snižuje až nabude nejmenší možnou hodnotu (a tím zaručuje ukončení algoritmu po konečně mnoha krocích).
+Pro důkaz faktu, že se algoritmus na každém vstupu zastaví, je založen na nalezení tzv. \textit{variantu}. Variant je hodnota udaná přirozeným číslem, která se během práce algoritmu snižuje až nabude nejmenší možnou hodnotu (a tím zaručuje ukončení algoritmu po konečně mnoha krocích).
 
 Příklad:
 
 \paragraph{Invariant.}
-\emph{Invariant}, též \emph{podmíněná správnost algoritmu}, je tvrzení, které:
+\textit{Invariant}, též \textit{podmíněná správnost algoritmu}, je tvrzení, které:
 \begin{itemize}[itemsep=0pt]
     \item platí před vykonáním prvního cyklu algoritmu, nebo po prvním vykonání cyklu    \item platí-li před vykonáním cyklu, platí i po jeho vykonání
     \item při ukončení práce algoritmu zaručuje správnost řešení
@@ -26,12 +29,89 @@ Příklad:
 Příklad:
 
 \subsection*{Složitost algoritmu}
+Časovou složitost algoritmu udáváme jako asymptotický odhad $T(n)$ času potřebného pro vyřešení každé instance velikosti $n$.
 
-\subsection*{Složitost úlohy - třídy složitosti}
-Úlohy/algoritmy chceme nějak zařadit, a tak vznikají třídy složitosti, redukce, atd.
+\subsubsection*{Asymptotický růst funkcí} Definujeme několik symbolů (množin).
 
-\subsection*{Třída složitosti - P}
+\paragraph{$\mathcal{O}$} Je dána nezáporná funkce $g(n)$. Řekneme, že nezáporná funkce $f(n)$ je $\mathcal{O}(g(n))$, jestliže existuje kladná konstanta $c$ a přirozené číslo $n_0$ tak, že
 
-\subsection*{Třída složitosti - NP}
+\begin{center}
+    $f(n) \leq c \cdot g(n)$ pro všechny $n \geq n_0$
+\end{center}
+
+$\mathcal{O}(g(n))$ můžeme též chápat jako třídu všech nezáporných funkcí $f(n)$:
+
+\begin{center}
+    $\mathcal{O}(g(n)) = \{ f(n)~|~\exists c > 0, n_o$ tak, že $f(n) \leq c \cdot g(n) ~ \forall n \geq n_0\}$
+\end{center}
+
+\begin{itemize}[itemsep=0pt]
+    \item $\Omega(g(n)) = \{ f(n)~|~\exists c > 0 ,n_o$ tak, že $f(n) \geq c \cdot g(n) ~ \forall n \geq n_0\}$
+    \item $\Theta(g(n)) = \{ f(n)~|~\exists c_1,c_2 > 0 ,n_o$ tak, že $c_1 \cdot g(n) \leq f(n) \leq c_2 \cdot g(n) ~ \forall n \geq n_0\}$
+    \item $o(g(n)) = \{ f(n)~|~\forall c > 0 \exists n_o$ tak, že $ 0 \leq f(n) < c \cdot g(n) ~ \forall n \geq n_0\}$
+    \item $\omega(g(n)) = \{ f(n)~|~\forall c > 0 \exists n_o$ tak, že $ 0 \leq c \cdot g(n) < f(n) ~ \forall n \geq n_0\}$
+\end{itemize}
+
+\subsection*{Složitost úlohy}
+
+\label{heading:tm}
+\subsection*{Turingův stroj (Turing machine - TM)}
+Je teoretický model počítače, který se skládá z:
+
+\begin{itemize}[itemsep=0pt]
+    \item z \textbf{řídící jednotky}, která se může nacházet v jednom z konečně mnoha stavů
+    \item potenciálně \textbf{nekonečné pásky} (nekonečné na obě strany) rozdělené na jednotlivé pole
+    \item \textbf{čtecí hlavy}, která umožňuje číst obsah polí a přepisovat obsah polí pásky
+\end{itemize}
+
+\noindent Je dán sedmicí ($Q,\Sigma, \Gamma, \delta, 
+q_0, B, F$), kde
+
+\begin{itemize}[itemsep=0pt]
+    \item $Q$ je konečná množina stavů
+    \item $\Sigma$ je konečná množina vstupních symbolů
+    \item $\Gamma$ je konečná množina páskových symbolů, přitom $\Sigma \subset \Gamma$
+    \item $B$ - je prázdný symbol (\textit{blank}), jedná se o páskový symbol, který není vstupním symbolem (tj. $B \in \Gamma \setminus \Sigma$)
+    \item $\delta$ je přechodová funkce, tj. parciální zobrazení z množiny $(Q \setminus F) \times \Gamma$ do množiny $Q \times \Gamma \times {L,R}$, (zde $L$ znamená pohyb hlavy o jedno pole doleva, $R$ pohyb doprava)
+    \item $q_0 \in Q$ je počáteční stav
+    \item $F \subset Q$ je množina koncových stavů
+\end{itemize}
+
+\paragraph{Nedeterministický TM} Je takový Turingův stroj, u kterého připustíme, aby v jedné situaci mohl provézt několik různých kroků.
+
+\paragraph{Přijímaný a rozhodovaný jazyk TM.} Vstupní slovo $w \in \Sigma^*$ je \textit{přijato} Turingovým strojem $M$ právě tehdy, když se Turingův stroj na slově $w$ úspěšně zastaví. Množinu slov $w \in \Sigma^*$, které Turingův stroj přijímá, se nazývá \textit{jazyk přijímaný M} a značíme ho $L(M)$.
+
+Turingův stroj \textit{rozhoduje} jazyk $L$, jestliže tento jazyk přijímá a navíc se na každém vstupu zastaví.
+
+\subsection*{Třída složitosti -  $\mathcal{P}$}
+\label{heading:p}
+
+\paragraph{Třída $\mathcal{P}$} Řekneme, že rozhodovací úloha $\mathcal{U}$ leží ve třídě $\mathcal{P}$, jestliže \textbf{existuje deterministický} Turingův stroj, který \textbf{rozhodne} jazyk $L_\mathcal{U}$ a pracuje v \textbf{polynomiálním čase}; tj. funkce $T(n)$ je $\mathcal{O}(p(n))$ pro nějaký polynom $p(n)$.
+
+\paragraph{Příklady $\mathcal{P}$ úloh:}
+\begin{itemize}[itemsep=0pt]
+    \item \textbf{\color{darkBrown}Minimální kostra v grafu}. Je dán neorinetovaný graf $G$ s ohodnocením hran $c$. Je dáno číslo $k$. Existuje kostra grafu ceny menší nebo rovno $k$?
+    
+    \item \textbf{\color{darkBrown}Nejkratší cesty v acyklickém grafu}. Je dán acyklický graf s ohodnocením hran $a$. Jsou dány vrcholy $r$ a $c$. Je dáno číslo $k$. Existuje orientovaná cesta z vrcholu $r$ do vrcholu $c$ délky menší nebo rovno $k$?
+    
+    \item \textbf{\color{darkBrown}Toky v sítích}. Je dána síť s horním omezením $c$, dolním omezením $l$, se zdrojem z a spotřebičem $s$. Dále je dáno číslo $k$. Existuje přípustný tok od $z$ do $s$ velikosti alespoň $k$?
+    
+    \item \textbf{\color{darkBrown}Minimální řez}. Je dána síť s horním omezením $c$, dolním omezením $l$. Dále je dáno číslo $k$. Existuje řez, který má kapacitu menší nebo rovnu $k$?
+\end{itemize}
+
+\subsection*{Třída složitosti - $\mathcal{NP}$}
+\label{heading:np}
+
+\paragraph{Třída $\mathcal{NP}$} Řekneme, že rozhodovací úloha $\mathcal{U}$ leží ve třídě $\mathcal{NP}$, jestliže \textbf{existuje nedeterministický} Turingův stroj, který \textbf{rozhodne} jazyk $L_\mathcal{U}$ a pracuje v \textbf{polynomiálním čase}.
+
+\paragraph{Příklady $\mathcal{NP}$ úloh:}
+\begin{itemize}[itemsep=0pt]
+    \item \textbf{\color{darkBrown}Kliky v grafu}. Je dán neorinetovaný graf $G$ a číslo $k$. Existuje klika v grafu $G$ o alespoň $k$ vrcholech?
+    
+    \item \textbf{\color{darkBrown}Nejkratší cesty v obecném grafu}. Je dán orientovaný graf s ohodnocením hran $a$. Jsou dány vrcholy $r$ a $v$. Je dáno číslo $k$. Existuje orientovaná cesta z vrcholu $r$ do vrcholu $c$ délky menší nebo rovno $k$?
+    
+    \item \textbf{\color{darkBrown}$k$-barevnost}. Je dán neorientovaný graf $G$. Je graf $G$ $k$-barevný?    
+    \item \textbf{\color{darkBrown}Knapsack}. Je dáno $n$ předmětů $1,2, \dots, n$. Každý předmět $i$ má cenu $c_i$ a váhu $w_i$. Dále jsou dána čísla $A$ a $B$. Je možné vybrat předměty tak, aby celková váha nepřevýšila $A$ a celková cena byla alespoň $B$?
+\end{itemize}
 
 Otázka obsahuje texty, úryvky a definice z \cite{tal:demlova}.
