--- a/spolecne/oi-magistr-spolecne.tex
+++ b/spolecne/oi-magistr-spolecne.tex
@@ -3,65 +3,67 @@
 \usepackage[czech, english]{babel}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage{wrapfig}
+\usepackage{wrapfig} % plovouci obrazky
 \usepackage{graphicx}
 \usepackage{xspace}
-\usepackage{enumerate}
-\usepackage{enumitem}
+\usepackage{enumerate} % seznamy
+\usepackage{enumitem} % odrazky seznamu
 \usepackage{bbding}
-\usepackage{color}
+\usepackage[usenames,dvipsnames]{color} % barvy
 \usepackage[square, numbers]{natbib}
-\usepackage{url}
-\usepackage{tabularx}
+\usepackage{url} % url adresy
+\usepackage{tabularx} % tabulky
 \usepackage{courier}
-\usepackage{listings,xcolor}
+\usepackage{listings,xcolor} % vypisy kodu
 \usepackage{inconsolata}
-\usepackage{amsmath}
+\usepackage{amsmath} % matematicke symboly
+\usepackage{amsxtra} % matematicka pismena
 \usepackage{soul}
-\usepackage{datetime}
+\usepackage{datetime} % datum a cas
 
 % custom packages
 \usepackage{../_lib/infodata} % info strings
 \usepackage{../_lib/macros}
-\usepackage{../_lib/codestyle}
-\usepackage{../_lib/mathstyle}
+\usepackage{../_lib/colors} % barvy
+\usepackage{../_lib/codestyle} % highlight zdrojovych kodu
+\usepackage{../_lib/mathstyle} % matematicke pomocne fce
 
 \usepackage{../_lib/qtree}
 
 \begin{document}
-\selectlanguage{czech}
+    \selectlanguage{czech}
 
-%%  Titulni strana  %%
-\rendercoverpage
+    %%  Titulni strana  %%
+    \rendercoverpage
 
-%%  Obsah  %%
-\tableofcontents
-% smazani cisla stranky u obsahu
-\addtocontents{toc}{\protect\thispagestyle{empty}}
+    %%  Obsah  %%
+    \tableofcontents
+    % smazani cisla stranky u obsahu
+    \addtocontents{toc}{\protect\thispagestyle{empty}}
 
-\rendermainbody
+    \rendermainbody
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%    INCLUDE OTAZEK     %%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%%%%%%%    INCLUDE OTAZEK     %%%%%%%%%%%%%%%%%%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\include{01/01-spolecne} % PAL
-\include{02/02-spolecne} % PAL
-\include{03/03-spolecne} % PAL
-\include{04/04-spolecne} % PAL
-\include{05/05-spolecne} % TAL
-\include{06/06-spolecne} % TAL
-\include{07/07-spolecne} % KO
-\include{08/08-spolecne} % KO
-\include{09/09-spolecne} % KO
+    \include{01/01-spolecne} % PAL
+    \include{02/02-spolecne} % PAL
+    \include{03/03-spolecne} % PAL
+    \include{04/04-spolecne} % PAL
+    \include{05/05-spolecne} % TAL
+    \include{06/06-spolecne} % TAL
+    \include{07/07-spolecne} % KO
+    \include{08/08-spolecne} % KO
+    \include{09/09-spolecne} % KO
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%	BIBLIOGRAFIE	        %%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\bibliographystyle{../_lib/csplainnat}
-{
-  \def\CS{$\cal C\kern-0.1667em\lower.5ex\hbox{$\cal S$}\kern-0.075em $}
-  \bibliography{../reference}
-}
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%%%%%%%	BIBLIOGRAFIE	        %%%%%%%%%%%%%%%%%%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \bibliographystyle{../_lib/csplainnat}
+    {
+        \def\CS{$\cal C\kern-0.1667em\lower.5ex\hbox{$\cal S$}\kern-0.075em $}
+        \bibliography{../reference}
+    }
 
 \end{document}
