spolecna/05/tal  + master theorem (def, priklad)  + tridy asymptoticke slozitosti

--- a/_lib/colors.sty
+++ b/_lib/colors.sty
@@ -1,3 +1,4 @@
 % vlastni barvy
 % vice - http://en.wikibooks.org/wiki/LaTeX/Colors
 \definecolor{darkBrown}{RGB}{100, 65, 0}
+\definecolor{silver}{RGB}{230, 230, 230}
