--- a/reference.bib
+++ b/reference.bib
@@ -51,3 +51,10 @@
   year = 2014,
   url = "http://math.feld.cvut.cz/demlova/teaching/tal/predn_tal.html"
 }
+
+@Misc{algoritmy:slozitosti,
+  key    = "algoritmy:slozitosti",
+  author = "{Ing. Pavel Mička}",
+  title  = "{Třídy složitosti a Turingovy stroje}",
+  url   = "http://www.algoritmy.net/article/5774/Tridy-slozitosti"
+}
