--- a/spolecne/oi-magistr-spolecne.tex
+++ b/spolecne/oi-magistr-spolecne.tex
@@ -18,6 +18,9 @@
 \usepackage{inconsolata}
 \usepackage{amsmath} % matematicke symboly
 \usepackage{amsxtra} % matematicka pismena
+\usepackage{wasysym} % znak vyplnene sipky
+\usepackage{setspace} % vyska radku
+\usepackage{changepage} % zmena okraju stranky
 \usepackage{soul}
 \usepackage{datetime} % datum a cas
 
