--- a/spolecne/05/05-spolecne.tex
+++ b/spolecne/05/05-spolecne.tex
@@ -1,7 +1,6 @@
 %!TEX root=../oi-magistr-spolecne.tex
-\section[TAL - Algoritmus, P, NP]{Algoritmus, správnost algoritmu, složitost algoritmu, složitost úlohy, třída P, třída NP.}
+\section[TAL - Algoritmus, $\mathcal{P}$, $\mathcal{NP}$]{Algoritmus, správnost algoritmu, složitost algoritmu, složitost úlohy, třída $\mathcal{P}$, třída $\mathcal{NP}$.}
 
-% symboly - http://www.combinatorics.net/Resources/weblib/A.12-13/a12.html
 \paragraph{Algoritmus.}
 \label{algoritmus}
 \textit{Algoritmem} rozumíme dobře definovaný proces, tj. posloupnost výpočetních kroků, který přijímá hodnoty (zadání, vstup) a vytváří hodnoty (řešení, výstup).
@@ -46,8 +45,8 @@ $\mathcal{O}(g(n))$ můžeme též chápat jako třídu všech nezáporných fun
 \begin{itemize}[itemsep=0pt]
     \item $\Omega(g(n)) = \{ f(n)~|~\exists c > 0 ,n_o$ tak, že $f(n) \geq c \cdot g(n) ~ \forall n \geq n_0\}$
     \item $\Theta(g(n)) = \{ f(n)~|~\exists c_1,c_2 > 0 ,n_o$ tak, že $c_1 \cdot g(n) \leq f(n) \leq c_2 \cdot g(n) ~ \forall n \geq n_0\}$
-    \item $o(g(n)) = \{ f(n)~|~\forall c > 0 \exists n_o$ tak, že $ 0 \leq f(n) < c \cdot g(n) ~ \forall n \geq n_0\}$
-    \item $\omega(g(n)) = \{ f(n)~|~\forall c > 0 \exists n_o$ tak, že $ 0 \leq c \cdot g(n) < f(n) ~ \forall n \geq n_0\}$
+    \item $o(g(n)) = \{ f(n)~|~\forall c > 0 ~\exists n_o$ tak, že $ 0 \leq f(n) < c \cdot g(n) ~ \forall n \geq n_0\}$
+    \item $\omega(g(n)) = \{ f(n)~|~\forall c > 0 ~\exists n_o$ tak, že $ 0 \leq c \cdot g(n) < f(n) ~ \forall n \geq n_0\}$
 \end{itemize}
 
 \paragraph{Tranzitivita $\mathcal{O}, \Omega, \Theta$.} Máme dány tři nezáporné funkce $f(n), g(n), h(n)$
