spolecna/06/tal  + heuristiky  + 2aprox alg  + christofides  + monte-carlo  + ZPP  + las-vegas

--- a/reference.bib
+++ b/reference.bib
@@ -58,3 +58,10 @@
   title  = "{Třídy složitosti a Turingovy stroje}",
   url   = "http://www.algoritmy.net/article/5774/Tridy-slozitosti"
 }
+
+@Misc{wiki:parovani,
+  key    = "wiki:parovani",
+  author = "{Přispěvovatelé wikipedie}",
+  title  = "{Párování grafu}",
+  url   = "http://cs.wikipedia.org/wiki/Párování_grafu"
+}
