spolecna/06/tal  + cookova veta

--- a/_lib/macros.sty
+++ b/_lib/macros.sty
@@ -30,7 +30,7 @@
 
 % odrazky seznamu - default
 \renewcommand{\labelitemi}{$\bullet$}
-\renewcommand{\labelitemii}{$\cdot$}
+%\renewcommand{\labelitemii}{$\cdot$}
 \renewcommand{\labelitemiii}{$\diamond$}
 \renewcommand{\labelitemiv}{$\ast$}
 % odrazky seznamu
