--- a/spolecne/06/06-spolecne.tex
+++ b/spolecne/06/06-spolecne.tex
@@ -48,7 +48,75 @@ Dle Cookovy věty lze převést v polynomiálním čase libovolný nedeterminist
 
 Důsledkem této věty je vymezení skupiny úloh, které jsou nejtěžší v rámci všech problémů třídy NP. O těchto úlohách, na které lze převést v polynomiálním čase libovolnou jinou úlohu z NP, říkáme, že jsou $\mathcal{NP}$-úplné ($\mathcal{NP}$-complete).
 
-\paragraph{Důkaz.}
+\paragraph{Důkaz.} Není těžké se přesvědčit že úloha \textit{SAT} je ve třídě $\mathcal{NP}$. První fáze nedeterministického algoritmu vygeneruje ohodnocení logických proměnných a na základě tohoto ohodnocení jsme schopni v polynomiálním čase ověřit, zda je v tomto ohodnocení formule pravdivá nebo ne.
+
+Druhá část důkazu spočívá v popisu práce TM formulí výrokové logiky. Načrtneme si základní myšlenku tohoto popisu.
+
+Je dán NTM $M = (Q,\Sigma, \Gamma, \delta, 
+q_0, B, F)$. Předpokládejme, že $M$ přijímá slovo $w$ a potřebuje při tom $p(n)$ kroků.
+
+Zavedeme logické proměnné:
+
+\begin{itemize}[itemsep=0pt]
+    \item $h_{i,j},~i = 0, 1, \hdots, p(n); j = 1, 2, \hdots, p(n);$
+    \begin{itemize}[itemsep=0pt]
+        \item $h_{i,j}$ je rovna 1, pokud hlava TM v čase $i$ čte $j$-té pole pásky.
+    \end{itemize}
+    
+    \item $s^{q}_{i},~i = 0, 1, \hdots, p(n); q \in Q$
+    \begin{itemize}[itemsep=0pt]
+        \item $s^{q}_{i}$ je rovna 1, pokud TM v čase $i$ je ve stavu $q$.
+    \end{itemize}
+    
+    \item $t^{A}_{i,j},~i = 0, 1, \hdots, p(n); j = 1, 2, \hdots, p(n); A \in \Gamma$
+    \begin{itemize}[itemsep=0pt]
+        \item $t^{A}_{i,j}$ je rovna 1, pokud v čase $i$ v $j$-té poli pásky je páskový symbol $A$.
+    \end{itemize}
+\end{itemize}
+
+\noindent Nyní je třeba formulemi popsat následující fakta:
+
+\begin{enumerate}
+    \item V každém okamžiku je TM v právě jednom stavu.
+    \item V každém okamžiku čte hlava TM právě jedno pole vstupní pásky.
+    \item V každém okamžiku je na každém poli pásky TM právě jeden páskový symbol.
+    \item Na začátku práce (tj. v čase 0) je TM ve stavu $q_0$, hlava čte první pole pásky a na pásce je na prvních $n$ polích vstupní slovo, ostatní pole pásky obsahují $B$.
+    \item Krok TM je určen přechodovou funkcí, tj. stav stroje, obsah čteného pole a poloha hlavy v čase $i + 1$ je dána přechodovou funkcí.
+    \item V polích pásky, které v čase $i$ hlava nečte, je obsah v čase $i + 1$ stejný jako v $i$.
+    \item Na konci práce TM , tj. v čase $p(n)$, je stroj ve stavu $q_f$.
+\end{enumerate}
+
+\noindent Ukážeme jak utvořit formule pro body \textbf{1}, \textbf{4}, \textbf{5}, \textbf{6} a \textbf{7}.
+
+Bod \textbf{1}. V okamžiku $i$ je TM v aspoň jednom stavu:
+
+    $$\bigvee \limits_{q \in Q} s^{q}_{i}.$$
+    
+V okamžiku $i$ TM není ve dvou různých stavech:
+
+    $$\bigwedge \limits_{q \neq q'} (\neg s^{q}_{i} \vee \neg s^{q'}_{i}).$$
+    
+Nyní fakt, že TM je v okamžiku $i$ právě v jednom stavu je konjunkce obou výše uvedených formulí:
+
+    $$ (\bigvee \limits_{q \in Q} s^{q}_{i}) \wedge \bigwedge \limits_{q \neq q'} (\neg s^{q}_{i} \vee \neg s^{q'}_{i}).$$
+
+Bod \textbf{4}. Na začátku práce (tj. v čase 0) je TM ve stavu $q_0$, hlava čte první pole pásky a na pásce je na prvních $n$ polích vstupní slovo $a_1 a_2\hdots a_n$, ostatní pole pásky obsahují $B$.
+
+    $$s^{q_0}_{0} \wedge h_{0,1} \wedge t^{a_1}_{0,1} \wedge \hdots \wedge t^{a_n}_{0,n} \wedge t^{B}_{0,n + 1} \wedge \hdots \wedge t^{B}_{0,p(n)}.$$
+    
+Bod \textbf{5}. Jestliže TM je v čase $i$ ve stavu $q$, hlava je na $j$-tém poli pásky, hlava čte páskový symbol $A$ a $\delta (q, A)$ se skládá z trojic $(p, C, D)$ (zde $D = 1$ znamená posun hlavy doprava, $D = -1$ znamená posun hlavy doleva), pak formule má tvar:
+
+    $$\bigwedge \limits_{j} \bigwedge \limits_{A \in \Gamma} ( (s^{q}_{i} \wedge h_{i,j} \wedge t^{A}_{i,j}) \Rightarrow \bigvee (s^{p}_{i+1} \wedge t^{C}_{i+1,j} \wedge h_{i+1,j+D}) ).$$
+    
+Bod \textbf{6}. Obsah polí kromě $j$-tého zůstává v čase $i + 1$ stejný:
+
+    $$\bigwedge \limits_{j} \bigwedge \limits_{A \in \Gamma} ((\neg h_{i,j} \wedge t^{A}_{i,j}) \Rightarrow t^{A}_{i+1,j}).$$
+    
+Bod \textbf{7}. Na konci práce TM, tj. v čase $p(n)$ je stroj ve stavu $q_f$:
+
+    $$s^{g_f}_{p(n)}.$$
+    
+Výslednou formuli dostaneme jako konjunkci všech dílčích formulí pro všechny časové okamžiky $i = 0, 1, \hdots , p(n)$.
 
 \subsection*{Heuristiky na řešení $\mathcal{NP}$-těžkých úloh}
 
