Added package: tabu

--- a/spolecne/oi-magistr-spolecne.tex
+++ b/spolecne/oi-magistr-spolecne.tex
@@ -23,6 +23,7 @@
 \usepackage{changepage} % zmena okraju stranky
 \usepackage{soul}
 \usepackage{datetime} % datum a cas
+\usepackage{tabu} % vylepsene tabulky - ruzne siroke ohraniceni
 
 % custom packages
 \usepackage{../_lib/infodata} % info strings
