spolecna/01/pal  + amortizovana slozitost  + prioritni fronta

--- a/reference.bib
+++ b/reference.bib
@@ -59,9 +59,30 @@
   url   = "http://www.algoritmy.net/article/5774/Tridy-slozitosti"
 }
 
+@Misc{algoritmy:amortizovanaslozitost,
+  key    = "algoritmy:amortizovanaslozitost",
+  author = "{Ing. Pavel Mička}",
+  title  = "{Amortizovaná složitost}",
+  url   = "http://www.algoritmy.net/article/3024/Amortizovana-slozitost"
+}
+
 @Misc{wiki:parovani,
   key    = "wiki:parovani",
   author = "{Přispěvovatelé wikipedie}",
   title  = "{Párování grafu}",
   url   = "http://cs.wikipedia.org/wiki/Párování_grafu"
+}
+
+@Misc{wiki:amortizovana,
+  key    = "wiki:amortizovana",
+  author = "{Přispěvovatelé wikipedie}",
+  title  = "{Asymptotická složitost}",
+  url   = "http://cs.wikipedia.org/wiki/Asymptotická složitost"
+}
+
+@Misc{algoritmyeu:amortizovana,
+  key    = "algoritmyeu:amortizovana,",
+  author = "{Ing. Jakub Černý, PhD.}",
+  title  = "{Amortizovaná časová složitost}",
+  url   = "http://algoritmy.eu/zga/casova-slozitost/amortizovana/"
 }
