spolecna/01/pal  + binarni halda  + d-regularni halda  + binomialni halda  + fibonacciho halda (pouze uvod)

--- a/reference.bib
+++ b/reference.bib
@@ -80,9 +80,23 @@
   url   = "http://cs.wikipedia.org/wiki/Asymptotická složitost"
 }
 
+@Misc{wiki:fibonacci,
+  key    = "wiki:fibonacci",
+  author = "{Přispěvovatelé wikipedie}",
+  title  = "{Fibonacciho halda}",
+  url   = "http://cs.wikipedia.org/wiki/Fibonacciho_halda"
+}
+
 @Misc{algoritmyeu:amortizovana,
   key    = "algoritmyeu:amortizovana,",
   author = "{Ing. Jakub Černý, PhD.}",
   title  = "{Amortizovaná časová složitost}",
   url   = "http://algoritmy.eu/zga/casova-slozitost/amortizovana/"
+}
+
+@ONLINE{pal:prednasky,
+  author = "{Jiří Vyskočil, Radek, Mařík, Marko Berezovský}",
+  title = "Slidy k přednáškám PAL",
+  year = 2013,
+  url = "https://cw.felk.cvut.cz/wiki/courses/a4m33pal/prednasky"
 }
