--- a/spolecne/01/01-spolecne.tex
+++ b/spolecne/01/01-spolecne.tex
@@ -33,16 +33,37 @@ Halda obecně je datová struktura (obvykle stromová) splňující \textbf{vlas
     \textit{Pokud A je potomek B, pak B $\geq$ A}
 \end{center}
 
-\paragraph{Binární halda} Je binární strom s dvěma dalšími omezeními:
+\subsubsection*{Binární halda (Binary heap)}
+Binární halda je binární strom s dvěma dalšími omezeními:
 
 \begin{enumerate}[itemsep=0pt, topsep=2pt]
     \item Je to kompletní binární strom krom posledního patra (nemusí být úplné). Elementy posledního patra se plní zleva doprava.
     \item Každý element je menší nebo roven vůči jeho potomkům (vlastnost haldy).
 \end{enumerate}
 
-Je to jedna z možných implementací prioritní fronty. Reprezentovat ji můžeme pomocí pole, kde prvek na indexu $i$ má potomky na indexech $2i$ a $2i + 1$ a rodiče na indexu $i/2$.
+\noindent Je to jedna z možných implementací prioritní fronty. Reprezentovat ji můžeme pomocí pole (obr. \ref{fig:heap_array_representation}), kde prvek na indexu $i$ má potomky na indexech $2i$ a $2i + 1$ a rodiče na indexu $i/2$.
+
+\begin{figure}[htbp]
+    \begin{center}
+        \vspace{-20px}
+        \includegraphics[width=100mm]{01/images/Max-Heap}
+        \vspace{-20px}
+        \caption{Reprezentace (maximální) binární haldy v poli}
+        \label{fig:heap_array_representation}
+        \vspace{-20px}
+    \end{center}
+\end{figure}
 
 \paragraph{Operace.} Operace binární haldy a jejich složitosti:
+
+\begin{itemize}[itemsep=0pt, topsep=2pt]
+    \item \texttt{accessMin()} - vrátí hodnotu kořene stromu (typicky první prvek pole)
+    \item \texttt{deleteMin(e)} - vrátí element \texttt{e}, který je kořenem stromu, na jeho místo vloží nejpravější prvek \texttt{y} ze spodního patra a poté, pokud je \texttt{y} menší než jeho nejmenší potomek, prohazuji \texttt{y} s jeho nejmenším potomkem do té doby, dokud je \texttt{y} menší než jeho nově vzniknuvší nejmenší potomek,  (tzv. \texttt{y} probublává stromem dolů).
+    \item \texttt{insert(e)} - přidáme element \texttt{e} na konec haldy a dokud je předek větší než \texttt{e}, tak je prohazujeme (probublávání směrem nahoru).
+    \item \texttt{delete(e)} - podobně jako \texttt{deleteMin()}, odeberu element \texttt{e} a nechám ho probublat
+    \item \texttt{merge(h1, h2)} - sloučí 2 haldy, vytvoří nové pole, kam nakopíruje obsah obou hald a na toto nové pole zavolá proceduru \texttt{heapify()}. Ta jede od půlky pole směrem na začátek (navštíví všechny podhaldy) a každý vrchol podhaldy nechá probublat a správně zařadit.
+    \item \texttt{decreaseKey(k, v)} - zmenšíme hodnotu elementu s klíčem \texttt{k} o \texttt{v} a necháme probublat stromem.
+\end{itemize}
 
 \begin{table}[ht]
     \centering
@@ -59,4 +80,138 @@ Je to jedna z možných implementací prioritní fronty. Reprezentovat ji může
     \end{tabu}
     \caption{Binární halda - Operace a jejich složitosti}
 \label{table:bin_heap_complexity}
+\end{table}
+
+\subsubsection*{D-regulární halda (D-ary heap)}
+D-regulární halda je zobecnění binární haldy, kde počet potomků se rovná číslu $d$, namísto 2 jako je tomu v haldě binární. $D$ nám udává počet štěpení stromu haldy. Operace jsou identické jako v binární haldě. Časová složitost operací je téměř stejná, liší se jen v základu logaritmu (u binární haldy je základ 2, tady $d$). Pro efektivní implementaci je vhodné zvolit $d$ jako mocninu 2. V tomto případě lze totiž využít bitových posunů - změna indexu při průchodu polem \cite{pal:prednasky}.
+
+\paragraph{Operace.} Operace d-regulární haldy a jejich složitosti:
+\begin{table}[ht]
+    \centering
+    \vspace{0px}
+    \begin{tabu}{|[1pt]c|c|c|[1pt]}
+        \tabucline[1pt]{-}
+        operace & čas. složitost & poznámka \\\tabucline[1pt]{-}
+        \texttt{accessMin()} & $\Theta (1)$ &  \textcolor{gray}{přístup k vrcholu haldy} \\\hline
+        \texttt{deleteMin(e)} & $\Theta (\log_d(n))$ &  \textcolor{gray}{smazání vrcholu haldy} \\\hline
+        \texttt{insert(e)} & $\Theta (\log_d(n))$ &  \textcolor{gray}{přidání prvku do haldy} \\\hline
+        \texttt{delete(e)} & $\Theta (\log_d(n))$ &  \textcolor{gray}{smazání elementu haldy} \\\hline
+        \texttt{merge(h1,h2)} & $\Theta (n_1 + n_2)$ &  \textcolor{gray}{sloučení 2 hald} \\\hline
+        \texttt{decreaseKey(k,v)} & $\Theta (\log_d(n))$ &  \textcolor{gray}{snížení hodnoty klíče $k$ o $v$} \\\hline
+    \end{tabu}
+    \caption{D-regulární halda - Operace a jejich složitosti}
+\label{table:d_heap_complexity}
+\end{table}
+
+\subsubsection*{Binomiální halda (Binomial heap)}
+Binomiální halda je kolekce binomiálních stromů stupňů $i = 0 \hdots \lfloor \log(n) \rfloor$. Každý řád je zastoupen maximálně 1 stromem.
+
+\paragraph{Binomiální strom} je definovám rekurzivně:
+
+\begin{itemize}[itemsep=0pt, topsep=2pt]
+    \item Binomiální strom řádu 0 obsahuje jediný prvek - kořen
+    \item Binomiální strom řádu $k$ má kořenový element, jehož potomci jsou kořeny binomiálních stromů stupňů $k-1, k-2, \hdots, 2, 1, 0$ (v tomto pořadí)
+\end{itemize}
+
+\begin{wrapfigure}{r}{0.55\textwidth}
+    \vspace{-20px}
+    \begin{center}
+        \includegraphics[width=65mm]{01/images/Binomial_Trees}
+    \end{center}
+    \vspace{-30pt}
+    \label{fig:binom_heap}
+    \vspace{-60pt}
+\end{wrapfigure}
+
+\noindent Pro binomiální strom řádu $k$ platí:
+
+\begin{itemize}[itemsep=0pt, topsep=2pt]
+    \item splňuje vlastnost haldy
+    \item hloubka stromu je $k$
+    \item kořen má $k$ potomků
+    \item obsahuje $2^k$ prvků
+\end{itemize}
+
+\paragraph{Operace.} Operace binomiální haldy a jejich složitosti:
+
+\begin{itemize}[itemsep=0pt, topsep=2pt]
+    \item \texttt{accessMin()} - vrátí kořen binomiálního stromu z MIN ukazatele.
+    \item \texttt{deleteMin(e)} - vezmou se všechny podstromy, které vznikly odebráním kořene a ty se postupně mergují s ostatními stromy
+    \item \texttt{insert(e)} - z vkládaného prvku se vytvoři nová binomiální halda (strom řádu 0) a ta se merguje s původní haldou
+    \item \texttt{delete(e)} - sníží se hodnota pomocí \texttt{decreaseKey} na $-\infty$ a provede se \texttt{deleteMin()}
+    \item \texttt{merge(h1, h2)} - Analogie mezi mergeováním dvou hald a binárním sčítáním. Naskládáme si stromy obou hald pod sebe (podle jejich stupňů). Pokud v jedné haldě je strom $i$-tého řádu a v druhé není, tak ho jen opíši. Pokud v obou haldách existují stromy stejného řadu, pak vzniká přenos do vyššího řádu. Kdykoliv vznikne přenos, mergujeme tyto dva stromy do sebe. Díky struktuře stromů, se provádí merge, porovnáním jejich kořenů, menší z kořenů se stane kořenem nově vzniklého stromu (řádu o 1 vyšší) a druhý strom se stane jeho potomkem.
+    \item \texttt{decreaseKey(k, v)} - podobné jako u binární haldy
+\end{itemize}
+
+\begin{figure}[htbp]
+    \begin{center}
+        \includegraphics[width=45mm]{01/images/Binomial_heap_merge1}
+        \hspace{50px}
+        \includegraphics[width=85mm]{01/images/Binomial_heap_merge2}
+        \caption{Binomiální halda MERGE - 2 příklady}
+        \label{fig:binom_heap}
+    \end{center}
+\end{figure}
+
+\begin{table}[ht]
+    \centering
+    \vspace{0px}
+    \begin{tabu}{|[1pt]c|c|c|[1pt]}
+        \tabucline[1pt]{-}
+        operace & čas. složitost & poznámka \\\tabucline[1pt]{-}
+        \texttt{accessMin()} & $\Theta (1)$ &  \textcolor{gray}{přístup k vrcholu haldy} \\\hline
+        \texttt{deleteMin(e)} & $\Theta (\log(n))$ &  \textcolor{gray}{smazání vrcholu haldy} \\\hline
+        \texttt{insert(e)} & $\Theta (\log(n))$ amortizovaně: $\Theta(1)$ &  \textcolor{gray}{přidání prvku do haldy} \\\hline
+        \texttt{delete(e)} & $\Theta (\log(n))$ &  \textcolor{gray}{smazání elementu haldy} \\\hline
+        \texttt{merge(h1,h2)} & $\Theta (\log(n))$ &  \textcolor{gray}{sloučení 2 hald} \\\hline
+        \texttt{decreaseKey(k,v)} & $\Theta (\log(n))$ &  \textcolor{gray}{snížení hodnoty klíče $k$ o $v$} \\\hline
+    \end{tabu}
+    \caption{Binární halda - Operace a jejich složitosti}
+\label{table:bin_heap_complexity}
+\end{table}
+
+\subsubsection*{Fibonacciho halda}
+Založena na binomiální haldě. Má relaxovanější strukturu, která umožňuje zlepšené asymptotické složitosti. Fibonnaciho halda se nevyužívá v real-time systémech, protože některé operace mají lineární složitost.
+
+\paragraph{Struktura.} Fibonacciho haldu tvoří skupina stromů vyhovující lokální podmínce na uspořádání haldy, která vyžaduje, aby pro každý uzel stromu platilo, že prvek, který reprezentuje, je menší než prvek reprezentovaný jeho potomky. Z této podmínky vyplývá, že minimálním prvkem je vždy kořen jednoho ze stromů. Vnitřní struktura Fibonacciho haldy je v porovnání s binomiální haldou daleko více flexibilní. Jednotlivé stromy nemají pevně daný tvar a v extrémním případě může každý prvek haldy tvořit izolovaný strom nebo naopak všechny prvky mohou být součástí jediného stromu hloubky $n$. Tato flexibilní struktura umožňuje velmi jednoduchou implementaci operací s haldou. Operace, které nejsou potřebné, odkládáme a vykonáváme je až v okamžiku, kdy je to nevyhnutelné, například spojení nebo vložení nového prvku se jednoduše provede spojením kořenových seznamů (s konstantní náročností) a jednotlivé stromy spojíme až při operaci snížení hodnoty klíče \cite{wiki:fibonacci}.
+
+\paragraph{Implementace.} Pro rychlé vymazání a zřetězení se vytváří \textit{obousměrný cyklický spojový seznam} kořenů všech stromů (obr. \ref{fig:fibonacci_heap}). Pro potomky každého prvku se vytváří podobný seznam. Pro každý uzel se ukládá počet synů a údaj, zda je zvýrazněn. Navíc si uchováváme ukazatel na kořenový prvek s minimální hodnotou klíče ($MIN$) \cite{wiki:fibonacci}.
+
+\begin{figure}[htbp]
+    \begin{center}
+        \includegraphics[width=100mm]{01/images/fibonacci_heap}
+        \caption{Reprezentace fibonacciho haldy}
+        \label{fig:fibonacci_heap}
+    \end{center}
+\end{figure}
+
+\paragraph{Operace.} Operace Fibonacciho haldy a jejich složitosti:
+
+\begin{itemize}[itemsep=0pt, topsep=2pt]
+    \item \texttt{accessMin()} - vrátí kořen z Fibonacciho stromu na který ukazuje $MIN$ pointer
+    \item \texttt{deleteMin(e)} - 
+    \item \texttt{insert(e)} - vytvoří se nová halda obsahující jediný element \texttt{e}; \texttt{mark(e) = false}; Merge s původní haldou - $O(1)$
+    \item \texttt{delete(e)} - 
+    \item \texttt{merge(h1, h2)} - prosté spojení seznamů s kořenovými prvky stromů jednotlivých hald a update $MIN$ pointeru
+    \item \texttt{decreaseKey(k, v)} - 
+\end{itemize}
+
+\subsection*{Srovnání časových složitostí u hald}
+
+\begin{table}[ht]
+    \centering
+    \vspace{0px}
+    \begin{tabu}{|[1pt]c|c|c|c|c|[1pt]}
+        \tabucline[1pt]{-}
+        & \textbf{binary heap} & \textbf{d-ary heap} & \textbf{binomial heap} & \textbf{Fibonacci heap} \\\tabucline[1pt]{-}
+         \texttt{accessMin()} & $\Theta (1)$ &  $\Theta (1)$ & $\Theta (1)$ & $\Theta (1)$ \\\hline
+        \texttt{deleteMin(e)} & $\Theta (\log(n))$ & $\Theta (\log(n))$ & $\Theta (\log(n))$ & $O(n);O(\log(n))$ \\\hline
+        \texttt{insert(e)} & $\Theta (\log(n))$ & $\Theta (\log(n))$ & $O(\log(n));O(1)$ & $\Theta (1)$ \\\hline
+        \texttt{delete(e)} & $\Theta (\log(n))$ & $\Theta (\log(n))$ & $O(\log(n))$ & $O(n); O(\log(n))$ \\\hline
+        \texttt{merge(h1,h2)} & $\Theta (n)$ & $\Theta (n)$ & $O (\log(n))$ & $\Theta (1)$ \\\hline
+        \texttt{decreaseKey(k,v)} & $\Theta (\log(n))$ & $\Theta (\log(n))$ & $\Theta (\log(n))$ & $O(\log(n)); O(1)$ \\
+        \hline
+    \end{tabu}
+    \caption{Haldy - srovnání složitostí}
+\label{table:heaps_complexities}
 \end{table}
